--- a/Admin/index.html
+++ b/Admin/index.html
@@ -13,7 +13,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="public/img/Logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/img/Logo copy.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Purrrfect Match Dashboard</title>
     <link
